--- a/.gitmodules
+++ b/.gitmodules
@@ -18,9 +18,9 @@
 	path = bundle/vim-fugitive
 	url = https://github.com/tpope/vim-fugitive.git
     branch = master
-[submodule "bundle/vim-multiple-cursors"]
-	path = bundle/vim-multiple-cursors
-	url = https://github.com/terryma/vim-multiple-cursors.git
+[submodule "bundle/vim-visual-multi"]
+	path = bundle/vim-visual-multi
+	url = https://github.com/mg979/vim-visual-multi
     branch = master
 [submodule "bundle/vim-rails"]
 	path = bundle/vim-rails
