--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,7 @@
 	path = fonts
 	url = https://github.com/powerline/fonts.git
     branch = master
+[submodule "bundle/mru.vim"]
+	path = bundle/mru.vim
+	url = https://github.com/vim-scripts/mru.vim.git
+    branch = master
