--- a/.gitmodules
+++ b/.gitmodules
@@ -1,36 +1,40 @@
 [submodule "autoload/vim-pathogen"]
 	path = autoload/vim-pathogen
-	url = https://github.com/tpope/vim-pathogen.git
+	url = git@github.com:tpope/vim-pathogen.git
     branch = master
 [submodule "bundle/ale"]
 	path = bundle/ale
-	url = https://github.com/dense-analysis/ale.git
+	url = git@github.com:dense-analysis/ale.git
     branch = master
 [submodule "bundle/nerdtree"]
 	path = bundle/nerdtree
-	url = https://github.com/scrooloose/nerdtree.git
+	url = git@github.com:scrooloose/nerdtree.git
     branch = master
 [submodule "bundle/vim-airline"]
 	path = bundle/vim-airline
-	url = https://github.com/vim-airline/vim-airline.git
+	url = git@github.com:vim-airline/vim-airline.git
     branch = master
 [submodule "bundle/vim-fugitive"]
 	path = bundle/vim-fugitive
-	url = https://github.com/tpope/vim-fugitive.git
+	url = git@github.com:tpope/vim-fugitive.git
     branch = master
 [submodule "bundle/vim-visual-multi"]
 	path = bundle/vim-visual-multi
-	url = https://github.com/mg979/vim-visual-multi
+	url = git@github.com:mg979/vim-visual-multi
     branch = master
 [submodule "bundle/vim-yankstack"]
 	path = bundle/vim-yankstack
-	url = https://github.com/maxbrunsfeld/vim-yankstack.git
+	url = git@github.com:maxbrunsfeld/vim-yankstack.git
     branch = master
 [submodule "fonts"]
 	path = fonts
-	url = https://github.com/powerline/fonts.git
+	url = git@github.com:powerline/fonts.git
     branch = master
 [submodule "bundle/mru.vim"]
 	path = bundle/mru.vim
-	url = https://github.com/vim-scripts/mru.vim.git
+	url = git@github.com:vim-scripts/mru.vim.git
+    branch = master
+[submodule "bundle/vim-surround"]
+	path = bundle/vim-surround
+	url = git@github.com:tpope/vim-surround.git
     branch = master
